// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkbox demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col"
      data-v-dfc8ebef=""
    >
      <label
        class="ant-checkbox-wrapper semantic-mark-root css-var-v-0 ant-checkbox-css-var"
      >
        <span
          class="ant-checkbox semantic-mark-icon ant-wave-target semantic-mark-icon ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
        </span>
        <span
          class="ant-checkbox-label semantic-mark-label"
        >
           Checkbox 
        </span>
      </label>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element with inline-flex layout, baseline alignment, cursor style, reset styles and other basic checkbox container styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  icon
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Checkbox icon element with size, direction, background, border, border-radius, transitions, and checked state checkmark styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  label
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <span
                  class="ant-tag ant-tag-filled ant-tag-blue css-var-root"
                  data-v-dfc8ebef=""
                >
                  1.0.0
                  <!---->
                  <!---->
                  <!---->
                </span>
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Label text element with padding and spacing styles relative to the checkbox
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`checkbox demo > renders basic correctly 1`] = `
<label
  class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var"
>
  <span
    class="ant-checkbox ant-wave-target ant-wave-target"
  >
    <input
      class="ant-checkbox-input"
      type="checkbox"
    />
  </span>
  <span
    class="ant-checkbox-label"
  >
     Checkbox 
  </span>
</label>
`;

exports[`checkbox demo > renders check-all correctly 1`] = `
<div
  data-v-app=""
>
  <label
    class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var"
  >
    <span
      class="ant-checkbox ant-checkbox-indeterminate ant-wave-target ant-checkbox-indeterminate ant-wave-target"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
    </span>
    <span
      class="ant-checkbox-label"
    >
       Check all 
    </span>
  </label>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-rail"
    role="separator"
  >
    <!---->
  </div>
  <div
    class="ant-checkbox-group css-var-root ant-checkbox-css-var"
    role="group"
  >
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked ant-wave-target"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Apple
      </span>
    </label>
    <label
      class="ant-checkbox-wrapper ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Pear
      </span>
    </label>
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked ant-wave-target"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`checkbox demo > renders controller correctly 1`] = `
<div
  data-v-app=""
>
  <p
    style="margin-bottom: 20px;"
  >
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked ant-wave-target"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Checked-Enabled
      </span>
    </label>
  </p>
  <p>
    <button
      class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-sm"
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
        Uncheck
      </span>
      <!---->
    </button>
    <button
      class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-sm"
      style="margin: 0px 10px;"
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
        Disable
      </span>
      <!---->
    </button>
  </p>
</div>
`;

exports[`checkbox demo > renders disabled correctly 1`] = `
<div
  data-v-app=""
>
  <label
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled css-var-root ant-checkbox-css-var"
  >
    <span
      class="ant-checkbox ant-wave-target ant-checkbox-disabled ant-wave-target"
    >
      <input
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
    </span>
    <!---->
  </label>
  <br />
  <label
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled css-var-root ant-checkbox-css-var"
  >
    <span
      class="ant-checkbox ant-checkbox-indeterminate ant-wave-target ant-checkbox-disabled ant-checkbox-indeterminate ant-wave-target"
    >
      <input
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
    </span>
    <!---->
  </label>
  <br />
  <label
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-disabled css-var-root ant-checkbox-css-var"
  >
    <span
      class="ant-checkbox ant-wave-target ant-checkbox-checked ant-checkbox-disabled ant-wave-target"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
    </span>
    <!---->
  </label>
</div>
`;

exports[`checkbox demo > renders group correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-checkbox-group css-var-root ant-checkbox-css-var"
    role="group"
  >
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked ant-wave-target"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Apple
      </span>
    </label>
    <label
      class="ant-checkbox-wrapper ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Pear
      </span>
    </label>
    <label
      class="ant-checkbox-wrapper ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Orange
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="ant-checkbox-group css-var-root ant-checkbox-css-var"
    role="group"
  >
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked ant-wave-target"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Apple
      </span>
    </label>
    <label
      class="ant-checkbox-wrapper ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Pear
      </span>
    </label>
    <label
      class="ant-checkbox-wrapper ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Orange
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="ant-checkbox-group css-var-root ant-checkbox-css-var"
    role="group"
  >
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-disabled ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-checked ant-checkbox-disabled ant-wave-target"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Apple
      </span>
    </label>
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-disabled ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Pear
      </span>
    </label>
    <label
      class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled ant-checkbox-group-item css-var-root ant-checkbox-css-var"
    >
      <span
        class="ant-checkbox ant-wave-target ant-checkbox-disabled ant-wave-target"
      >
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
        />
      </span>
      <span
        class="ant-checkbox-label"
      >
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`checkbox demo > renders layout correctly 1`] = `
<div
  class="ant-checkbox-group css-var-root ant-checkbox-css-var"
  role="group"
  style="width: 100%;"
>
  <div
    class="ant-row css-var-root"
  >
    <div
      class="ant-col ant-col-8 css-var-root"
    >
      <label
        class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var"
      >
        <span
          class="ant-checkbox ant-wave-target ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
        </span>
        <span
          class="ant-checkbox-label"
        >
           A 
        </span>
      </label>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
    >
      <label
        class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var"
      >
        <span
          class="ant-checkbox ant-wave-target ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
        </span>
        <span
          class="ant-checkbox-label"
        >
           B 
        </span>
      </label>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
    >
      <label
        class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var"
      >
        <span
          class="ant-checkbox ant-wave-target ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
        </span>
        <span
          class="ant-checkbox-label"
        >
           C 
        </span>
      </label>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
    >
      <label
        class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var"
      >
        <span
          class="ant-checkbox ant-wave-target ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
        </span>
        <span
          class="ant-checkbox-label"
        >
           D 
        </span>
      </label>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
    >
      <label
        class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var"
      >
        <span
          class="ant-checkbox ant-wave-target ant-wave-target"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
          />
        </span>
        <span
          class="ant-checkbox-label"
        >
           E 
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`checkbox demo > renders style-class correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-middle ant-flex-vertical"
>
  <label
    class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var"
  >
    <span
      class="ant-checkbox ant-wave-target ant-wave-target"
      style="border-radius: 6px;"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
    </span>
    <span
      class="ant-checkbox-label"
      style="color: blue;"
    >
       Object styles 
    </span>
  </label>
  <label
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked checkbox-demo-root css-var-root ant-checkbox-css-var"
  >
    <span
      class="ant-checkbox checkbox-demo-icon checkbox-demo-icon-checked ant-wave-target ant-checkbox-checked checkbox-demo-icon checkbox-demo-icon-checked ant-wave-target"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        type="checkbox"
      />
    </span>
    <span
      class="ant-checkbox-label checkbox-demo-label checkbox-demo-label-checked"
    >
       Function classes 
    </span>
  </label>
</div>
`;
